@@ -1,4 +1,4 @@
-package com.tictactoe;
+package com.tictactoe.entity;
 
 import java.util.HashMap;
 import java.util.List;
@@ -54,7 +54,7 @@ public class Field {
         for (List<Integer> winPossibility : winPossibilities) {
             if (field.get(winPossibility.get(0)) == field.get(winPossibility.get(1))
                 && field.get(winPossibility.get(0)) == field.get(winPossibility.get(2))) {
-                return field.get(winPossibility.get(0));
+                return field.get(winPossibility.getFirst());
             }
         }
         return Sign.EMPTY;
